testdata/compiler/valid/compile-single-step-flow.pt
base "https://api.example.com"

req login:
	GET /auth/login
	? status == 200

flow "single-step":
	login

	? login.status == 200
