testdata/compiler/invalid/template-status-in-pre-hook.pt
req invalidContext:
	GET /items
	pre hook {
	  println "status={{status}}"
	}
	? status == 200

flow "ctx":
	invalidContext
